ci(dependabot): shorten commit prefix

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
       interval: "monthly"
       time: "02:42" # UTC
     commit-message:
-      prefix: "build(container):"
+      prefix: "build(docker):"
 
   - package-ecosystem: "github-actions"
     directory: "/"
