build(container): update base image packages

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,6 +3,9 @@ name: Build container
 on:
   push:
   pull_request:
+  # Build regularly in order to have up to date packages in the edge image
+  schedule:
+    - cron: '42 2 * * 6' # weekly on Saturday 2:42 UTC
 
 jobs:
   docker:
