--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,10 +1,16 @@
 {
-  "lock": false,
   // https://deno.land/manual/getting_started/configuration_file
+  "lock": false,
+  "tasks": {},
+  // https://deno.land/manual/advanced/typescript/configuration
+  // https://www.typescriptlang.org/tsconfig/
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "dom.asynciterable", "deno.ns"],
+    "importsNotUsedAsValues": "error",
     "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
