--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,31 +1,36 @@
 {
-  // https://deno.land/manual/getting_started/configuration_file
-  "lock": false,
-  "tasks": {},
-  // https://deno.land/manual/advanced/typescript/configuration
-  // https://www.typescriptlang.org/tsconfig/
-  "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "dom.asynciterable", "deno.ns"],
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "useUnknownInCatchVariables": true
-  },
-  "lint": {
-    "rules": {
-      // https://lint.deno.land/?all=on
-      "include": [
-        "camelcase",
-        "default-param-last",
-        "eqeqeq",
-        "explicit-module-boundary-types",
-        "no-await-in-loop",
-        "no-eval"
-      ]
-    }
-  }
+	// https://deno.land/manual/getting_started/configuration_file
+	"lock": false,
+	"tasks": {},
+	// https://deno.land/manual/advanced/typescript/configuration
+	// https://www.typescriptlang.org/tsconfig/
+	"compilerOptions": {
+		"lib": ["dom", "dom.iterable", "dom.asynciterable", "deno.ns"],
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"useUnknownInCatchVariables": true
+	},
+	"fmt": {
+		"options": {
+			"useTabs": true
+		}
+	},
+	"lint": {
+		"rules": {
+			// https://lint.deno.land/?all=on
+			"include": [
+				"camelcase",
+				"default-param-last",
+				"eqeqeq",
+				"explicit-module-boundary-types",
+				"no-await-in-loop",
+				"no-eval"
+			]
+		}
+	}
 }
