--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,26 +1,23 @@
 {
 	// https://deno.land/manual/getting_started/configuration_file
 	"lock": false,
-	"tasks": {},
 	// https://deno.land/manual/advanced/typescript/configuration
 	// https://www.typescriptlang.org/tsconfig/
 	"compilerOptions": {
 		"lib": ["dom", "dom.iterable", "dom.asynciterable", "deno.ns"],
-		"noFallthroughCasesInSwitch": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
 		"useUnknownInCatchVariables": true
 	},
+	"exclude": [
+		"public/client.js"
+	],
 	"fmt": {
-		"exclude": ["public/client.js"],
 		"useTabs": true
 	},
 	"lint": {
-		"exclude": ["public/client.js"],
 		"rules": {
 			// https://lint.deno.land/?all=on
 			"include": [
@@ -29,7 +26,12 @@
 				"eqeqeq",
 				"explicit-module-boundary-types",
 				"no-await-in-loop",
-				"no-eval"
+				"no-eval",
+				"no-non-null-asserted-optional-chain",
+				"no-non-null-assertion",
+				"no-slow-types",
+				"no-sparse-arrays",
+				"verbatim-module-syntax"
 			]
 		}
 	}
